customer.network.policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: customer-service-network-policy
  namespace: banking
spec:
  podSelector:
    matchLabels:
      app: customer-service

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: banking

      ports:
        - protocol: TCP
          port: 8080

  egress:

    - to:
        - namespaceSelector:
            matchLabels:
              name: banking

      ports:
        - protocol: TCP
          port: 5432

    - to:
        - namespaceSelector:
            matchLabels:
              name: banking

      ports:
        - protocol: TCP
          port: 9092

    - to:
        - namespaceSelector:
            matchLabels:
              name: monitoring

      ports:
        - protocol: TCP
          port: 9090

    - to:
        - ipBlock:
            cidr: 0.0.0.0/0

      ports:
        - protocol: UDP
          port: 53

        - protocol: TCP
          port: 53
